Private browsing indicator prevents tab bar from collapsing (#89)
* Hide private browsing indicator

* Add note to user

--- a/chrome/hide_tabs_with_one_tab.css
+++ b/chrome/hide_tabs_with_one_tab.css
@@ -1,7 +1,7 @@
 /* Source file https://github.com/MrOtherGuy/firefox-csshacks/tree/master/chrome/hide_tabs_with_one_tab.css made available under Mozilla Public License v. 2.0
 See the above repository for updates as well as full license text. */
 
-/* Makes tabs toolbar items zero-height initially and sets enlarge them to fill up space equal to tab-min-height set on tabs */
+/* Makes tabs toolbar items zero-height initially and sets enlarge them to fill up space equal to tab-min-height set on tabs. Optionally use privatemode_indicator_as_menu_button.css to replace main menu icon with private browsing indicator while tabs are hidden. */
 /* Firefox 65+ only */
 
 :root[sizemode="normal"] #nav-bar{ --uc-window-drag-space-width: 20px }
@@ -22,6 +22,12 @@ See the above repository for updates as well as full license text. */
   -moz-box-align: stretch;
   margin: 0 !important;
 }
+
+.accessibility-indicator,
+.private-browsing-indicator{ 
+  height: unset !important;
+}
+.accessibility-indicator > hbox{ padding-block: 0 !important }
 
 #tabbrowser-tabs .tabbrowser-tab{ height: var(--tab-min-height) }
 
